@@ -2,8 +2,10 @@ defaults:
   install_options: --source=http://gemcutter.org --source=http://gems.rubyforge.org --include-dependencies --no-ri --no-rdoc
 gems:
 - name: acts_as_fu
-  version: '0.0.5'
+  version: 0.0.5
 - name: activesupport
-  version: '>= 2.2.2'
+  version: >= 2.2.2
 - name: rspec
-  version: '>= 1.2.8'
+  version: >= 1.2.8
+- name: fixjour
+  version: 0.2.0
