@@ -629,4 +629,62 @@ describe ActiveHash, "Base" do
 
   end
 
+  describe ".transaction" do
+
+    it "execute the block given to it" do
+      foo = Object.new
+      foo.should_receive(:bar)
+      Country.transaction do
+        foo.bar
+      end
+    end
+
+    it "swallows ActiveRecord::Rollback errors" do
+      proc do
+        Country.transaction do
+          raise ActiveRecord::Rollback
+        end
+      end.should_not raise_error
+    end
+
+    it "passes other errors through" do
+      proc do
+        Country.transaction do
+          raise "hell"
+        end
+      end.should raise_error("hell")
+    end
+
+  end
+
+  describe "using with Fixjour" do
+
+    before do
+      Country.field :name
+      Fixjour do
+        define_builder(Country) do |klass, overrides|
+          klass.new(:name => 'Pat')
+        end
+      end
+    end
+
+    it "should verify" do
+      Fixjour.verify!
+    end
+
+    it "should work with the create builder" do
+      proc do
+        create_country
+      end.should change(Country, :count).by(1)
+    end
+
+    it "should work with the new builder" do
+      proc do
+        country = new_country :name => "foo"
+        country.name.should == "foo"
+      end.should_not change(Country, :count)
+    end
+
+  end
+
 end
