@@ -7,6 +7,7 @@
   - You can now use ActiveHash models as the parents of polymorphic belongs_to associations
   - save, save!, create and create! now add items to the in-memory collection
   - new_record? returns false if the record is part of the collection
+  - ActiveHash now works with Fixjour!
 
 2009-08-19
   - Added custom finders for multiple fields, such as .find_all_by_name_and_age
